--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,3 @@
-        
 *{
     padding: 0;
     margin: 0;
@@ -7,47 +6,59 @@
 }
 .main-container{
     display: grid;
-    grid-template-columns: 250px 1fr;
+    grid-template-rows: min-content 1fr;
     background: #F4F5F6;
     height: 100vh;
+    overflow: auto;
+    padding: 20px
 }
 .main-container nav {
-    padding: 20px 10px 20px 20px;
+    /* padding: 20px 10px 20px 20px; */
 }
 .main-container nav ul{
     display: flex;
-    border-radius: 10px;
-    box-shadow: -2px 6px 20px rgba(0,0,0,0.1);
-    flex-direction: column;
-    gap: 2px;
-    padding: 10px;
+    border-radius: 10px 10px 0 0;
+    /* box-shadow: -2px 6px 20px rgba(0,0,0,0.1);
+    flex-direction: column; */
+    gap: 5px;
+    /* padding: 10px; */
     list-style: none;
     height: 100%;
-    background: #FFFFFF;
+    position: relative;
+    top: 1px;
+    /* background: #FFFFFF; */
 }
 .main-container nav ul li{
     display: flex;
 }
 .main-container nav ul li a{
     padding: 8px 15px;
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
     transition: all 0.25s ease;
     color: #333333;
     text-decoration: none;
     font-weight: 500;
     width: 100%;
+    border: 1px solid #DDDDDD;
+    border-bottom: none;
+}
+.main-container nav ul li a.active{
+    font-weight: 600;
+    background: #FFFFFF;
 }
 .main-container nav ul li:hover a{
     background: #eeeeee;
 }
 .main-container .container{
-    padding: 20px 20px 20px 10px;
+    /* padding: 20px 20px 20px 10px; */
 }
 .main-container .container > *{
     border: 1px solid #DDDDDD;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
     padding: 20px;
     height: 100%;
+    overflow: auto;
+    background: #FFFFFF;
 }
 .form-main-container{
     display: flex;
@@ -68,6 +79,7 @@
     color: #FFFFFF;
     align-self: flex-end;
     background: transparent;
+    cursor: pointer;
 }
 .form-main-container button[type='submit']{
     background: #007bff;
@@ -81,7 +93,17 @@
     display: grid;
     height: fit-content;
     gap: 5px;
-    width: calc(33.3% - 13px)
+    width: calc(33.3% - 14px)
+}
+@media (max-width: 860px){
+    .form-container{
+        width: calc(50% - 10px);
+    }
+}
+@media (max-width: 660px){
+    .form-container{
+        width: 100%;
+    }
 }
 .form-container label{
     font-size: 14px;
@@ -177,10 +199,36 @@
     font-size: 14px;
     font-weight: 500;
 }
+
+.title{
+    font-size: 26px;
+    margin-bottom: 6px;
+    color: #333333;
+}
 .quota-summary p:last-child{
     margin-bottom: 10px;
 }
 
 #quota-validation-error, #error-list {
     color:red;
+}
+
+.loader {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 0px 0px 200vh rgba(255,255,255, 0.6);
+    z-index: 1;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
